# ai_recsys_study

./: .env.example  .gitignore  README.md  main.py  pyproject.toml
llm/: curator.py  pipeline.py  prompts.py
models/: evaluate.py  mf.py  ncf.py  sasrec.py
notebooks/: 01_data_fetch.ipynb  02_preprocessing.ipynb  03_mf_baseline.ipynb  04_ncf.ipynb  05_sasrec.ipynb  06_llm_curation.ipynb
scripts/: preprocess.py  test_curator.py  train.py
ui/: app.py
